# pdc

./: .gitignore  CMakeLists.txt  README.md  pdc_dghefvbef.py  pyproject.toml
cmake/: lsan.supp
doc/: archi.uxf  interact.uxf  util.uxf
img/: wilber-big.png:Zone.Identifier
pdc/: Edge.py  Input.py  NewProjectWindow.py  Node.py  NodeEditor.py  OpenProjectWindow.py  Output.py  PointDeCroix.py  Project.py  ProjectFile.py  ProjectManagerWindow.py  Settings.py
pdc/common/: Singleton.py
pdc/locales/en/LC_MESSAGES/: pdc.po
pdc/locales/fr/LC_MESSAGES/: pdc.po
src/: CMakeLists.txt  PointDeCroix.py  main.cpp
src/cli/: CMakeLists.txt  PDCCMDLineParser.cpp  PDCCMDLineParser.hpp
src/controller/: CMakeLists.txt  PDCController.cpp  PDCController.hpp
src/controller/project/: CMakeLists.txt  GenericPDCController.hpp  GraphController.cpp  GraphController.hpp  ProjectController.cpp  ProjectController.hpp
src/controller/project/cmds/: CMakeLists.txt  GraphCMD.hpp  ProjectCMD.hpp
src/dto/: CMakeLists.txt  EdgeData.hpp  NodeData.hpp
src/model/: CMakeLists.txt  PDCState.cpp  PDCState.hpp
src/model/project/: CMakeLists.txt  Edge.hpp  Project.cpp  Project.hpp
src/model/project/edge/: CMakeLists.txt  Edge.hpp
src/model/project/graph/: CMakeLists.txt  Graph.cpp  Graph.hpp  GraphEditor.cpp  GraphEditor.hpp
src/model/project/node/: CMakeLists.txt  ImageInputNode.cpp  ImageInputNode.hpp  ImageOutputNode.cpp  ImageOutputNode.hpp  ImageRGBCombinerNode.cpp  ImageRGBCombinerNode.hpp  ImageRGBSplitterNode.cpp  ImageRGBSplitterNode.hpp  Node.cpp  Node.hpp  NodeAllocator.cpp  NodeAllocator.hpp  NodeNotifier.hpp  NodeProperty.hpp  NodeRegister.hpp  Port.hpp  PortAllocator.cpp  PortAllocator.hpp  PortDeclaration.hpp  PortProperty.hpp  PortRegister.hpp
src/model/project/node/input/: CMakeLists.txt  Input.hpp
src/model/project/node/output/: CMakeLists.txt  Output.hpp
src/tests/: CMakeLists.txt  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_graph_valid_no_head.cpp
src/tests/model/: CMakeLists.txt  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_graph_valid_no_head.cpp  test_graph_valid_no_tail.cpp  test_graph_valid_not_connected.cpp
src/tests/view/: CMakeLists.txt  test0.cpp
src/third_parts/: CMakeLists.txt
src/third_parts/json/: CMakeLists.txt
src/third_parts/miniz/: CMakeLists.txt
src/utils/: CMakeLists.txt  Id.hpp  Identifiable.hpp  Image.cpp  Image.hpp  Int.cpp  Int.hpp  JSONPrintable.hpp  JSONWrapper.hpp  Log.cpp  Log.hpp  Singleton.hpp  Tab.hpp  Types.hpp
src/utils/Qt/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.hpp
src/utils/Zip/: CMakeLists.txt  ZipReader.cpp  ZipReader.hpp  ZipWriter.cpp  ZipWriter.hpp
src/view/: CMakeLists.txt  ImageView.hpp  PDCView.cpp  PDCView.hpp
src/view/GraphViewer/: CMakeLists.txt  EdgeView.hpp  GraphScene.cpp  GraphScene.hpp  GraphViewer.cpp  GraphViewer.hpp  NodeView.hpp  PortView.hpp
src/view/PDCMenuBar/: CMakeLists.txt  PDCMenuBar.cpp  PDCMenuBar.hpp
src/view/dialog/: CMakeLists.txt
src/view/dialog/NewProjectDialog/: CMakeLists.txt  NewProjectDialog.cpp  NewProjectDialog.hpp
src/view/dialog/NodePickerDialog/: CMakeLists.txt  NodePickerDialog.cpp  NodePickerDialog.hpp
src/view/dialog/OpenProjectDialog/: CMakeLists.txt  OpenProjectDialog.cpp  OpenProjectDialog.hpp
src/view/dialog/YesNoDialog/: CMakeLists.txt  YesNoDialog.hpp
src/view/toolbar/: CMakeLists.txt  Toolbar.cpp  Toolbar.hpp
start/: menu.md
